# rose

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
src/drivers/: keyboard.rs  mod.rs  timer.rs  vga.rs
src/drivers/tty/: mod.rs  serial.rs  vga.rs
src/kernel/: gdt.rs  interrupt.rs  memory.rs  mod.rs
